Bug 366579 - Line numbers in printed documents start with 0
Summary: Line numbers in printed documents start with 0
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.24.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-10 10:20 UTC by Qianli Ma
Modified: 2016-09-02 14:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE Frameworks 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Qianli Ma 2016-08-10 10:20:01 UTC
Line numbers in printed documents start with 0 instead of 1.

Reproducible: Always

Steps to Reproduce:
1. Print a document with kwrite / kate / kile, etc., with line numbers printed.


Actual Results:  
The first line has the line number 0.

Expected Results:  
Line numbers should start from 1 as a convention.
Comment 1 Dominik Haumann 2016-09-02 14:14:02 UTC
Git commit f07f72c69d163d81e51a0ab74c7cde676fe76b6d by Dominik Haumann.
Committed on 02/09/2016 at 14:13.
Pushed by dhaumann into branch 'master'.

Fix: Line numbers in printed documents now starts at 1

M  +1    -1    src/printing/printpainter.cpp

http://commits.kde.org/ktexteditor/f07f72c69d163d81e51a0ab74c7cde676fe76b6d
Comment 2 Dominik Haumann 2016-09-02 14:15:42 UTC
Fixed with KDE Frameworks 5.26. Thanks for the report!