Fix: Line numbers in printed documents now starts at 1

BUG: 366579